# CodingChallenge

./: .gitignore  CMakeLists.txt  README.md
include/: account.h  atm.h  card.h  institution.h
src/: ATMController.cpp  main.cpp
